--- a/Views/about.ejs
+++ b/Views/about.ejs
@@ -1,5 +1,5 @@
-<%-include('header')-%>
-
-<h1>Hello</h1>
-
-<%-include('footer')-%>
+<%-include('partials/header')-%>
+<h1>About</h1>
+<br />
+<p><%= val %></p>
+<%-include('partials/footer')-%>
