--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -1,1 +1,7 @@
-<%- include('header') -%> <%= val %> <%- include('footer') -%>
+<%- include('partials/header') -%>
+
+<h1>Home</h1>
+<br />
+<p><%= val %></p>
+
+<%- include('partials/footer') -%>
