--- a/Views/contact.ejs
+++ b/Views/contact.ejs
@@ -1,5 +1,7 @@
 <%-include('partials/header')-%>
-<h1>Contact</h1>
-<br />
-<p><%= val %></p>
+<div class="covering">
+  <h1>Contact</h1>
+  <br />
+  <p><%= val %></p>
+</div>
 <%-include('partials/footer')-%>
