--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -1,7 +1,20 @@
 <%- include('partials/header') -%>
+<div class="covering">
+  <h1>Home</h1>
+  <br />
+  <p><%= val %></p>
+  
 
-<h1>Home</h1>
-<br />
-<p><%= val %></p>
+  <% for(let i=0 ; i<globalPost.length ; i++){ %>
+    <div>
+      <h1><%= globalPost[i].title %></h1><br>
+      <p>
+        <%= globalPost[i].post %>
+      </p>
+    
+    </div>
+  <% } %>
+
+</div>
 
 <%- include('partials/footer') -%>
