--- a/Public/CSS/styles.css
+++ b/Public/CSS/styles.css
@@ -1,8 +1,28 @@
+body {
+  height: 100vh;
+}
+
 nav {
   min-height: 90px;
   margin-bottom: 20px;
 }
 
-footer {
+.footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 90px;
+  background-color: #e3f2fd;
+  color: #000;
   text-align: center;
+}
+
+.footer p {
+  margin-top: 25px;
+}
+
+.covering {
+  width: 95%;
+  margin: 0 auto;
 }
