--- a/Views/about.ejs
+++ b/Views/about.ejs
@@ -1,7 +1,9 @@
 <%-include('partials/header')-%>
-<div class="covering">
-  <h1>About</h1>
-  <br />
-  <p><%= val %></p>
+<div id="container">
+  <div class="covering">
+    <h1>About</h1>
+    <br />
+    <p><%= val %></p>
+  </div>
 </div>
 <%-include('partials/footer')-%>
