--- a/Views/home.ejs
+++ b/Views/home.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') -%>
+<div id="container">
 <div class="covering">
   <h1>Home</h1>
   <br />
@@ -15,6 +16,7 @@
     </div>
   <% } %>
 
+</div>
 </div>
 
 <%- include('partials/footer') -%>
