--- a/Views/partials/header.ejs
+++ b/Views/partials/header.ejs
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="stylesheet" href="../CSS/styles.css" />
     <title>Blog website</title>
   </head>
   <body>
