--- a/Views/post.ejs
+++ b/Views/post.ejs
@@ -1,5 +1,9 @@
-<%- include('partials/header') -%>
-
-<div class="covering"><%=title%> <%=post%></div>
-
-<%- include('partials/footer') -%>
+<%-include('partials/header')-%>
+<div id="container">
+  <div class="covering">
+    <h1><%= title %></h1>
+    <br />
+    <p><%= post %></p>
+  </div>
+</div>
+<%-include('partials/footer')-%>
